Closed Bug 22413 Opened 25 years ago Closed 24 years ago

[BLOCK] frame removal of block inside inline doesn't work

Categories

(Core :: DOM: Core & HTML, defect, P3)

x86
Windows NT
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: djn, Assigned: waterson)

References

Details

(Whiteboard: [nsbeta2-])

The test case below works correctly with M11 and IE 5.01. It breaks with M12 and the nightly build ID 1999122108. I'm running Windows 2000 Professional RC2. This bug is extremely important because it makes it impossible to build certain DHTML pages that are backwards compatible with Navigator 4.x. <html> <body> <p>This should be the only visible text when the page has loaded, and is with M11.</p> <div id="DescriptionText1"> <p>This paragraph disappears.</p> </div> <layer> <div id="DescriptionText2"> <p>This is visible in M12 -- it should have disappeared.</p> </div> </layer> <div id="DescriptionText3"> <layer> <p>This is visible in M12 -- it should have disappeared.</p> <layer> </div> <script LANGUAGE="JavaScript" type="text/javascript"> var n = document.getElementById("DescriptionText1"); while (n.hasChildNodes()) n.removeChild(n.firstChild); n = document.getElementById("DescriptionText2"); while (n.hasChildNodes()) n.removeChild(n.firstChild); n = document.getElementById("DescriptionText3"); while (n.hasChildNodes()) n.removeChild(n.firstChild); </script> </body> </html>
Assignee: vidur → kipp
Summary: <layer> tags in documents break DOM Level 1 behaviour → frame removal of block inside inline doesn't work
Checked in a partial fix on 12/22/1999. Forgot to remove code in the DOMFactory that used to create special script objects for layer/ilayer. The script now runs to completion and we remove the content correctly. I suspect that this should be enough for creating backward compatible pages. Turns out that there's still a layout issue that prevents the removal of frames from working correctly. From what I understand, the frame construction code creates an anonymous block frame for an inline that contains a block (as is the case with the P inside the LAYER element). Removal of the block from the inline doesn't seem to correctly fix the frame tree. Reassigning to the block bug bucket.
Target Milestone: M16
If I understand Vidur correctly, he's fixed the bulk of this problem such that the test case works as expected. So all that remains is cleaning up some memory issues having to do with destroying frames properly. That can wait until after beta. Marking M16. Vidur, if I misunderstood you could you please let me know.
Summary: frame removal of block inside inline doesn't work → [BLOCK] frame removal of block inside inline doesn't work
mine! mine mine mine! all mine! whoo-hoo!
Assignee: kipp → buster
I think this is another WCB problem. Nisheeth, if I'm wrong just dump it back in my pile.
Assignee: buster → nisheeth
Accepting bug...
Status: NEW → ASSIGNED
Keywords: nsbeta2
Blocks: 40246
Putting on [nsbeta2-] radar
Whiteboard: [nsbeta2-]
taking
Assignee: nisheeth → waterson
Status: ASSIGNED → NEW
Status: NEW → ASSIGNED
Target Milestone: M16 → M17
fixed with checking for 39211.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Mass update of qa contact
QA Contact: gerardok → janc
Component: DOM Level 1 → DOM HTML
QA contact Update
QA Contact: janc → desale
Updating QA contact to Shivakiran Tummala.
QA Contact: desale → stummala
Component: DOM: HTML → DOM: Core & HTML
QA Contact: stummala → general
You need to log in before you can comment on or make changes to this bug.