Partial fix for bug 22413. Create generic script instances for layer and ilayer elements. a=don r=waqar